--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ main {
 
 #about .about-col {
     display: flex;
+    justify-content: space-between;
     gap: 20px;
     margin-top: 25px;
 }
@@ -383,12 +384,13 @@ main {
     text-align: justify;
 }
 
-#about .about-col {
+
+/* #about .about-col {
     flex-direction: column;
-}
+} */
 
 #about .about-col .img-col img {
-    width: 50%;
+    width: 98%;
 }
 
 #about .about-col .info-col h2 {
@@ -430,3 +432,51 @@ main {
 
 
 /*--======== About SECTION END =======--*/
+
+
+/*<---------------------------------------------------------------->*/
+
+
+/*============== Facts Section START ===============*/
+
+#fact {
+    padding: 50px 30px;
+    background-color: white;
+}
+
+#fact .fact-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    margin-top: 50px;
+}
+
+#fact .fact-row .fact-box i {
+    color: var(--themeColor);
+    font-size: 40px;
+}
+
+#fact .fact-row .fact-row .fact-box strong {
+    color: var(--sideBGColor);
+    font-size: 30px;
+    margin-left: 5px;
+    font-weight: 600;
+}
+
+#fact .fact-row .fact-box p {
+    font-weight: 400;
+    font-size: 16px;
+}
+
+
+/* Mobile View */
+
+@media only screen and (max-width: 700px) {
+    #fact {
+        padding: 40px 15px;
+    }
+    #fact .fact-row {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+}
