--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ main {
 
 /* Mobile View */
 
-@media only screen and (max-width:650px) {
+@media only screen and (max-width:670px) {
     #home {
         padding: 30px;
     }
@@ -265,10 +265,6 @@ main {
         letter-spacing: 0;
         line-height: 50px;
     }
-}
-
-#home .home-row h1 br {
-    display: none;
 }
 
 #home .home-row p {
@@ -287,20 +283,20 @@ main {
 
 /* Global Heading */
 
-#about .sub-heading {
+.sub-heading {
     color: black;
     font-size: 30px;
     margin-bottom: 10px;
 }
 
-#about .divider {
+.divider {
     width: 80px;
     height: 4px;
     background-color: var(--themeColor);
     border-radius: 3px;
 }
 
-#about .divider .sub-para {
+.sub-para {
     color: var(--textColor);
     font-size: 15px;
     letter-spacing: 0.4px;
@@ -310,7 +306,6 @@ main {
 
 #about .about-col {
     display: flex;
-    justify-content: space-between;
     gap: 20px;
     margin-top: 25px;
 }
@@ -336,7 +331,7 @@ main {
     margin-top: -10px;
 }
 
-#about .about-col .info-col .sub-para {
+#about .about-col .info-col p {
     color: var(--textColor);
     font-size: 15px;
     letter-spacing: 0.5px;
@@ -361,6 +356,7 @@ main {
 #about .about-col .info-col .icon-list-col .icon-list ul li strong {
     color: var(--sideBGColor);
     font-weight: 600;
+    margin-right: 2px;
 }
 
 #about .about-col .info-col .icon-list-col .icon-list ul li span {
@@ -380,28 +376,27 @@ main {
 
 #about .divider~p {
     font-size: 14px;
-    letter-spacing: 0;
+    letter-spacing: 0px;
     text-align: justify;
 }
 
-
-/* #about .about-col {
+#about .about-col {
     flex-direction: column;
-} */
+}
 
 #about .about-col .img-col img {
-    width: 98%;
+    width: 50%;
 }
 
 #about .about-col .info-col h2 {
     font-weight: 600;
     font-size: 25px;
-    letter-spacing: 0;
+    letter-spacing: 0px;
 }
 
-#about .about-col .info-col .sub-para {
+#about .about-col .info-col p {
     font-size: 14px;
-    letter-spacing: 0;
+    letter-spacing: 0px;
 }
 
 #about .about-col .info-col .icon-list-col {
@@ -410,7 +405,6 @@ main {
 }
 
 #about .about-col .info-col .icon-list-col .icon-list ul li {
-    list-style: none;
     margin: 10px 0;
 }
 
@@ -464,7 +458,7 @@ main {
 }
 
 #fact .fact-row .fact-box p {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
 }
 
@@ -480,3 +474,431 @@ main {
         grid-gap: 10px;
     }
 }
+
+@media only screen and (max-width: 370px) {
+    #fact .fact-box .fact-box i {
+        font-size: 30px;
+    }
+    #fact .fact-row .fact-box strong {
+        font-size: 20px;
+    }
+    #fact .fact-row .fact-box p {
+        font-size: 14px;
+        font-weight: 400;
+    }
+}
+
+
+/* ================Fact END =================*/
+
+
+/*---------------------------------------------------------------------------------------------------------*/
+
+
+/* ==========SKILLS SECTION Stat===============*/
+
+#skill {
+    padding: 70px 30px;
+}
+
+#skill .skill-row {
+    margin-top: 35px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+
+#skill .skill-box .skill-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 4px;
+}
+
+#skill .skill-row .skill-box .skill-info h2 {
+    color: var(--sideBGColor);
+    font-weight: 600;
+    font-size: 15px;
+    font-style: italic;
+}
+
+#skill .skill-row .skill-box .skill-outter-line {
+    width: 100%;
+    height: 10px;
+    background-color: lightgray;
+    border-radius: 15px;
+}
+
+#skill .skill-row .skill-box .skill-outter-line .skill-inner-line {
+    height: 10px;
+    background-color: var(--themeColor);
+    border-radius: 20px;
+}
+
+
+/* Mobile View */
+
+@media only screen and (max-width: 450px) {
+    #skill {
+        padding: 50px 15px;
+    }
+    #skill .skill-row {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+    }
+}
+
+
+/* ==========SKILLS SECTION END===============*/
+
+
+/*------------------------------------------------------------------------------*/
+
+
+/*------========== Resume Section START============*/
+
+#resume {
+    padding: 70px 30px;
+    background-color: white;
+}
+
+#resume .resume-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 35px;
+}
+
+#resume .resume-row .resume-cols {
+    flex-basis: 50%;
+}
+
+#resume .resume-row .resume-cols h2 {
+    color: var(--sideBGColor);
+    font-weight: 600;
+    font-size: 25px;
+    margin: 15px 0;
+}
+
+#resume .resume-row .resume-cols .my-info {
+    padding: 0 20px 0 20px;
+    margin: 20px 0;
+    border-left: 2px solid var(--themeColor);
+    position: relative;
+}
+
+#resume .resume-row .resume-cols .my-info::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid var(--themeColor);
+    background-color: white;
+}
+
+#resume .resume-row .resume-cols h3 {
+    color: var(--sideBGColor);
+    font-size: 17px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#resume .resume-row .resume-cols .my-info p {
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 600;
+    font-style: italic;
+    margin: 10px 0;
+}
+
+#resume .resume-row .resume-cols .my-info ul li {
+    margin: 10px 0;
+    margin-left: 20px;
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+#resume .resume-row .resume-cols .my-edu {
+    padding: 0 20px 0 20px;
+    border-left: 2px solid var(--themeColor);
+    position: relative;
+}
+
+#resume .resume-row .resume-cols .my-edu::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid var(--themeColor);
+    background-color: white;
+}
+
+#resume .resume-row .resume-cols .sp-box {
+    padding: 4px 22px;
+    background-color: lightblue;
+    color: var(--textColor);
+    border-radius: 30px;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: italic;
+    margin: 15px 0;
+    display: inline-block;
+}
+
+#resume .resume-row .resume-cols .my-edu span+p {
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+    font-style: italic;
+    margin-bottom: 15px;
+}
+
+#resume .resume-row .resume-cols .my-edu span+p+p {
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+
+#resume .resume-row .resume-cols .pro-exp {
+    padding: 0 20px 0 20px;
+    border-left: 2px solid var(--themeColor);
+    position: relative;
+}
+
+#resume .resume-row .resume-cols .pro-exp ::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid var(--themeColor);
+    background-color: white;
+}
+
+#resume .resume-row .resume-cols .pro-exp p {
+    color: var(--textColor);
+    font-size: 17px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+#resume .resume-row .resume-cols .pro-exp ul li {
+    margin: 10px 0;
+    margin-left: 20px;
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+/* Mobile View */
+
+@media only screen and ( max-width: 820px) {
+    #resume {
+        padding: 50px 15px;
+    }
+}
+
+#resume .resume-row {
+    flex-direction: column;
+}
+
+#resume .resume-row .resume-cols {
+    flex-basis: 100%;
+}
+
+
+/*------========== Resume Section END============*/
+
+
+/*--------------------------------------------------------------------------------------------------->*/
+
+
+/* ========== Portfolio Section START ===========*/
+
+#portfolio {
+    padding: 70px 30px;
+}
+
+#portfolio .port-row {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 35px;
+}
+
+#portfolio .port-row .port-item {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#portfolio .port-row .port-item .port-img img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+#portfolio .port-row .port-item .port-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--themeColor);
+    padding: 0 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    transform: scale(0);
+    transition: 0.4s;
+    border-radius: 10px;
+    visibility: hidden;
+}
+
+#portfolio .port-row .port-item:hover .port-info {
+    transform: scale(1);
+    visibility: visible;
+}
+
+#portfolio .port-row .port-item .port-info h4 {
+    color: var(--bgColor);
+    font-size: 25px;
+    font-weight: 600;
+}
+
+#portfolio .port-row .port-item .port-info h4+p {
+    color: var(--bgColor);
+    font-size: 14px;
+}
+
+#portfolio .port-row .port-item .port-info a {
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    width: 45px;
+    height: 45px;
+    background-color: var(--bgColor);
+    border-radius: 50%;
+    color: var(--themeColor);
+    line-height: 46px;
+    transition: 0.4s;
+}
+
+#portfolio .port-row .port-item .port-info a:hover {
+    background-color: var(--sideBGColor);
+    color: var(--bgColor);
+}
+
+
+/* Mobile View */
+
+@media only screen and (max-width: 650px) {
+    #portfolio {
+        padding: 50px 10px;
+    }
+    #portfolio .port-row {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 15px;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    #portfolio {
+        padding: 50px 10px;
+    }
+    #portfolio .port-row {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 15px;
+    }
+}
+
+
+/* ========== Portfolio Section END ===========*/
+
+
+/*-----------------------------------------------------------------------------------------*/
+
+
+/* ========== Contact Section START ===========*/
+
+#contact {
+    padding: 70px 30px;
+}
+
+#contact .contact-row {
+    margin-top: 50px;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+}
+
+#contact .contact-row .contact-left {
+    flex-basis: 40%;
+    min-width: 40%;
+    background-color: white;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 20%);
+    border-radius: 4px;
+    padding: 30px;
+}
+
+#contact .contact-row .contact-left .icon-box {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    margin: 30px 0;
+}
+
+#contact .contact-row .contact-left .icon-box .icon i {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid var(--themeColor);
+    text-align: center;
+    line-height: 47px;
+    font-size: 20px;
+    color: var(--themeColor);
+    transition: 0.5s;
+}
+
+#contact .contact-row .contact-left .icon-box:hover .icon i {
+    background-color: var(--themeColor);
+    color: var(--bgColor);
+}
+
+#contact .contact-row .contact-left .icon-box .info h4 {
+    font-size: 20px;
+    color: var(--sideBGColor);
+    font-weight: 600;
+}
+
+#contact .contact-row .contact-left .icon-box .info h4+P {
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+/*---===============================TRABAJNDO AUN EN EL PORTAFOLIO============*/
+
+.tbj {
+    color: rgb(246, 16, 173);
+    font-weight: 800;
+    font-size: 40px;
+    text-align: center;
+}
+
+
+/* ==========Contact Section END ===========*/
